--- a/MainApp/app/build.gradle
+++ b/MainApp/app/build.gradle
@@ -43,8 +43,10 @@ dependencies {
     implementation 'com.google.firebase:firebase-firestore-ktx:24.4.0'
     implementation platform('com.google.firebase:firebase-bom:31.0.2')
     testImplementation 'junit:junit:4.13.2'
-    androidTestImplementation 'androidx.test.ext:junit:1.1.3'
-    androidTestImplementation 'androidx.test.espresso:espresso-core:3.4.0'
+    androidTestImplementation 'androidx.test.ext:junit:1.1.4'
+    androidTestImplementation 'androidx.test.espresso:espresso-core:3.5.0'
     implementation 'com.firebaseui:firebase-ui-auth:8.0.0'
     implementation 'androidx.navigation:navigation-fragment-ktx:2.5.3'
+    implementation 'org.jetbrains.kotlinx:kotlinx-coroutines-android:1.6.4'
+    implementation 'org.jetbrains.kotlinx:kotlinx-coroutines-core:1.6.4'
 }
