--- a/MainApp/app/src/main/AndroidManifest.xml
+++ b/MainApp/app/src/main/AndroidManifest.xml
@@ -28,14 +28,7 @@
                 android:value="" />
         </activity>
         <activity
-            android:name=".activities.SignUpActivity"
-            android:exported="false">
-            <meta-data
-                android:name="android.app.lib_name"
-                android:value="" />
-        </activity>
-        <activity
-            android:name=".activities.SignInActivity"
+            android:name=".activities.LogActivity"
             android:exported="false">
             <meta-data
                 android:name="android.app.lib_name"
