--- a/MainApp/app/src/main/AndroidManifest.xml
+++ b/MainApp/app/src/main/AndroidManifest.xml
@@ -1,20 +1,28 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools">
+
     <uses-permission android:name="android.permission.INTERNET" />
     <uses-permission android:name="android.permission.POST_NOTIFICATIONS" />
 
     <application
         android:allowBackup="true"
         android:dataExtractionRules="@xml/data_extraction_rules"
+        android:enableOnBackInvokedCallback="true"
         android:fullBackupContent="@xml/backup_rules"
         android:icon="@mipmap/ic_launcher"
         android:label="@string/app_name"
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/Theme.MyApp"
-        android:enableOnBackInvokedCallback="true"
         tools:targetApi="33">
+        <activity
+            android:name=".activities.NotificationActivity"
+            android:exported="false">
+            <meta-data
+                android:name="android.app.lib_name"
+                android:value="" />
+        </activity>
         <activity
             android:name=".activities.MainInstructorActivity"
             android:exported="false">
@@ -49,7 +57,8 @@
                 android:name="android.app.lib_name"
                 android:value="" />
         </activity>
-        <service android:name=".models.MyBackgroundService"></service>
+
+        <service android:name=".models.MyBackgroundService" />
     </application>
 
 </manifest>
