--- a/MainApp/app/src/main/AndroidManifest.xml
+++ b/MainApp/app/src/main/AndroidManifest.xml
@@ -10,7 +10,7 @@
         android:dataExtractionRules="@xml/data_extraction_rules"
         android:enableOnBackInvokedCallback="true"
         android:fullBackupContent="@xml/backup_rules"
-        android:icon="@mipmap/my_launcher_try"
+        android:icon="@mipmap/my_launcher_new"
         android:label="@string/app_name"
         android:roundIcon="@mipmap/my_launcher_try_round"
         android:supportsRtl="true"
